--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,23 +1,26 @@
 
-/* Footer starts */
 .footer {
     background-color: #000000;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 15px 50px;
+    margin-top: 50px;
+    overflow: hidden;
   }
+  
+  
   
   .footer-logo img {
     width: 50px; 
-    vertical-align: middle; /* Align the logo vertically with the text */
+    vertical-align: middle; /
   }
   
   .footer-logo span {
     color: white;
-    /* font-size: 20px; */
     margin-left: 10px;
   }
+  
   
   .social-media ul {
     list-style: none;
@@ -38,8 +41,6 @@
     background-color: #ffffff; 
   }
   
-  /* Footer ends */
-
   @media screen and (max-width: 767px) {
     
     .footer {
@@ -47,13 +48,20 @@
       text-align: center;
       line-height: 3em 0;
     }
+
+    .footer-logo{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   
     .footer p {
-      padding: 1.5em 0;
+      padding: 24px 0;
     }
   
     .footer-logo span {
      padding: 15px 0 0 0;
     }
+  
   
   }
