--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,18 +1,17 @@
-/* Header starts */
-
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #f5f5f5;
-  /* padding: 10px; */
+  padding: 10px 50px;
+  overflow: hidden;
 }
 
 .logo {
   display: flex;
   align-items: center;
   gap: 5px;
-  margin-left: 20px;
+  margin-left: 8px;
 }
 .logo img {
   width: 50px;
@@ -22,7 +21,12 @@
 .logo span {
   color: #737373;
   font-weight: 600;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding-left: 5.5px;
+}
+
+.logo-link {
+  text-decoration: none;
 }
 
 .input {
@@ -36,8 +40,8 @@
 
 .search {
   background-color: #dbdbdb;
-  width: 90%;
-  height: 34px;
+  width: 100%;
+  height: 35px;
   padding: 12px;
   outline: none;
   border: none;
@@ -60,9 +64,10 @@
   margin-right: 30px;
 }
 
-/* Header ends */
-
 @media screen and (max-width: 767px) {
+  .logo img {
+    margin-right: 5.5px;
+  }
   .logo span {
     display: none;
   }
